syntax = "proto3";

package oracle;

service Oracle {
	rpc AskDeepThought(AskDeepThoughtRequest) returns (AskDeepThoughtResponse) {}
}

message AskDeepThoughtRequest {
	string data = 1;
}

message AskDeepThoughtResponse {
	string data = 1;
}
